# nomnom-ai

./: .gitignore  CLAUDE.md
NomNom-Backend/: .env.template  .gitignore  alembic.ini  pyproject.toml
NomNom-Backend/alembic/: env.py
NomNom-Backend/alembic/versions/: 0a2a49f598fc_create_users_and_user_profiles.py  38fd9abf7399_add_meal_type_to_food_logs.py  eface4bf2d85_create_food_logs_table.py  f2c3a8d9e1f4_add_pgvector_embeddings_and_nutrition_kb.py
NomNom-Backend/src/: app.py  config.py  constants.py  database.py
NomNom-Backend/src/api/: auth.py  deps.py  food_logs.py  photos.py  profile.py  recommendations.py
NomNom-Backend/src/llm/: __init__.py  cache.py  client.py  embedding.py  evaluator.py  guardrails.py  logger.py  parser.py  prompt_engine.py  rate_limiter.py  router.py  seed_knowledge.py  tools.py
NomNom-Backend/src/llm/prompts/: __init__.py  analyze_food.j2  cat_personas.j2  recommend_meal.j2  weekly_recap.j2
NomNom-Backend/src/models/: __init__.py  ai_call_log.py  food_log.py  nutrition_kb.py  user.py
NomNom-Backend/src/nomnom_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
NomNom-Backend/src/schemas/: food_log.py  recommendation.py  user.py
NomNom-Backend/src/services/: ai_service.py  auth_service.py  food_log_service.py  knowledge_service.py  photo_service.py  profile_service.py
NomNom-Backend/tests/: conftest.py
NomNom-Backend/tests/integration/: test_auth.py  test_food_logs.py  test_food_logs_analyze.py  test_profile.py
NomNom-Backend/tests/unit/: test_tdee.py
NomNom-Backend/tests/unit/llm/: __init__.py  (+12 more)
(+67 files in other folders)
